# whatever-disentangler

./: .gitignore  README.html  README.ipynb  README.md  pyproject.toml  requirements.txt  setup.py  whatever_disentangler.py  whatever_disentangler_constants.py
assets/: standard-encodings.txt
whatever_disentangler/: __main__.py  constants.py  whatever_disentangler.py  whatever_disentangler_constants.py
