[tool.poetry]
name = "whatever-disentangler"
version = "0.1.0"
description = "A brute-force disentangler for legacy encodings"
authors = ["Kiril Isakov <kirix.isakov@gmail.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "2.28.2"
urllib3 = "1.26.9"
colorama = "0.4.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
